--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint src/*.js test/*.js",
     "prepublish": "./node_modules/babel-cli/bin/babel.js src --out-dir lib",
     "precommit": "npm run lint",
-    "test": "mocha --require babel-core/register"
+    "test": "mocha --require babel-core/register",
+    "cover": "babel-istanbul cover node_modules/mocha/bin/_mocha -- --require babel-core/register --colors --reporter dot test/"
   },
   "babel": {
     "presets": [
@@ -31,8 +32,10 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-istanbul": "^0.12.2",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.11.0",
